@@ -42,7 +42,7 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    appdirs>=1.4.0
+    platformdirs>=2.0.0
     astroid>=2.7.2,<2.8 # (You should also upgrade requirements_test_min.txt)
     isort>=4.2.5,<6
     mccabe>=0.6,<0.7
@@ -75,7 +75,7 @@ markers =
 [isort]
 multi_line_output = 3
 line_length = 88
-known_third_party = appdirs, astroid, sphinx, isort, pytest, mccabe, six, toml
+known_third_party = platformdirs, astroid, sphinx, isort, pytest, mccabe, six, toml
 include_trailing_comma = True
 skip_glob = tests/functional/**,tests/input/**,tests/extensions/data/**,tests/regrtest_data/**,tests/data/**,astroid/**,venv/**
 src_paths = pylint
@@ -83,7 +83,7 @@ src_paths = pylint
 [mypy]
 scripts_are_modules = True
 
-[mypy-appdirs]
+[mypy-platformdirs]
 ignore_missing_imports = True
 
 [mypy-astroid.*]
