@@ -15,6 +15,12 @@ What's New in Pylint 2.10.2?
 ============================
 Release date: TBA
 
+..
+  Put bug fixes that should not wait for a new minor version here
+
+* We now use platformdirs instead of appdirs since the latter is not maintained.
+
+  Closes #4886
 
 
 What's New in Pylint 2.10.1?
